// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Frame getFrameTitle 1`] = `
<div
  className="frame"
  key="1"
  onContextMenu={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  role="listitem"
  tabIndex={0}
  title="Jump to https://aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com/assets/src/js/foo-view.js:10"
>
  <FrameIndent
    indentLevel={1}
  />
  <FrameTitle
    frame={
      Object {
        "asyncCause": null,
        "displayName": "renderFoo",
        "generatedLocation": Object {
          "column": undefined,
          "line": 10,
          "source": Object {
            "displayURL": Object {
              "fileExtension": "js",
              "filename": "foo-view.js",
              "group": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com",
              "path": "/assets/src/js/foo-view.js",
              "search": "",
            },
            "extensionName": null,
            "id": "source",
            "isExtension": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "thread": "FakeThread",
            "url": "https://aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com/assets/src/js/foo-view.js",
          },
          "sourceActor": Object {
            "actor": "source-actor",
            "id": "source-actor",
            "source": "source",
            "sourceObject": Object {
              "displayURL": Object {
                "fileExtension": "js",
                "filename": "foo-view.js",
                "group": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com",
                "path": "/assets/src/js/foo-view.js",
                "search": "",
              },
              "extensionName": null,
              "id": "source",
              "isExtension": false,
              "isOriginal": false,
              "isPrettyPrinted": false,
              "isWasm": false,
              "thread": "FakeThread",
              "url": "https://aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com/assets/src/js/foo-view.js",
            },
          },
          "sourceActorId": "source-actor",
        },
        "id": "1",
        "index": 0,
        "location": Object {
          "column": undefined,
          "line": 10,
          "source": Object {
            "displayURL": Object {
              "fileExtension": "js",
              "filename": "foo-view.js",
              "group": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com",
              "path": "/assets/src/js/foo-view.js",
              "search": "",
            },
            "extensionName": null,
            "id": "source",
            "isExtension": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "thread": "FakeThread",
            "url": "https://aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com/assets/src/js/foo-view.js",
          },
          "sourceActor": Object {
            "actor": "source-actor",
            "id": "source-actor",
            "source": "source",
            "sourceObject": Object {
              "displayURL": Object {
                "fileExtension": "js",
                "filename": "foo-view.js",
                "group": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com",
                "path": "/assets/src/js/foo-view.js",
                "search": "",
              },
              "extensionName": null,
              "id": "source",
              "isExtension": false,
              "isOriginal": false,
              "isPrettyPrinted": false,
              "isWasm": false,
              "thread": "FakeThread",
              "url": "https://aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com/assets/src/js/foo-view.js",
            },
          },
          "sourceActorId": "source-actor",
        },
        "scope": Object {
          "actor": "scope-actor",
          "bindings": Object {
            "arguments": Array [],
            "variables": Object {},
          },
          "function": null,
          "object": null,
          "parent": null,
          "scopeKind": "",
          "type": "block",
        },
        "source": Object {
          "displayURL": Object {
            "fileExtension": "js",
            "filename": "foo-view.js",
            "group": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com",
            "path": "/assets/src/js/foo-view.js",
            "search": "",
          },
          "extensionName": null,
          "id": "source",
          "isExtension": false,
          "isOriginal": false,
          "isPrettyPrinted": false,
          "isWasm": false,
          "thread": "FakeThread",
          "url": "https://aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com/assets/src/js/foo-view.js",
        },
        "state": "on-stack",
        "this": Object {},
        "thread": "FakeThread",
        "type": "call",
      }
    }
    options={
      Object {
        "shouldMapDisplayName": true,
      }
    }
  />
  <span
    className="clipboard-only"
  >
     
  </span>
  <FrameLocation
    displayFullUrl={false}
    frame={
      Object {
        "asyncCause": null,
        "displayName": "renderFoo",
        "generatedLocation": Object {
          "column": undefined,
          "line": 10,
          "source": Object {
            "displayURL": Object {
              "fileExtension": "js",
              "filename": "foo-view.js",
              "group": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com",
              "path": "/assets/src/js/foo-view.js",
              "search": "",
            },
            "extensionName": null,
            "id": "source",
            "isExtension": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "thread": "FakeThread",
            "url": "https://aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com/assets/src/js/foo-view.js",
          },
          "sourceActor": Object {
            "actor": "source-actor",
            "id": "source-actor",
            "source": "source",
            "sourceObject": Object {
              "displayURL": Object {
                "fileExtension": "js",
                "filename": "foo-view.js",
                "group": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com",
                "path": "/assets/src/js/foo-view.js",
                "search": "",
              },
              "extensionName": null,
              "id": "source",
              "isExtension": false,
              "isOriginal": false,
              "isPrettyPrinted": false,
              "isWasm": false,
              "thread": "FakeThread",
              "url": "https://aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com/assets/src/js/foo-view.js",
            },
          },
          "sourceActorId": "source-actor",
        },
        "id": "1",
        "index": 0,
        "location": Object {
          "column": undefined,
          "line": 10,
          "source": Object {
            "displayURL": Object {
              "fileExtension": "js",
              "filename": "foo-view.js",
              "group": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com",
              "path": "/assets/src/js/foo-view.js",
              "search": "",
            },
            "extensionName": null,
            "id": "source",
            "isExtension": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "thread": "FakeThread",
            "url": "https://aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com/assets/src/js/foo-view.js",
          },
          "sourceActor": Object {
            "actor": "source-actor",
            "id": "source-actor",
            "source": "source",
            "sourceObject": Object {
              "displayURL": Object {
                "fileExtension": "js",
                "filename": "foo-view.js",
                "group": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com",
                "path": "/assets/src/js/foo-view.js",
                "search": "",
              },
              "extensionName": null,
              "id": "source",
              "isExtension": false,
              "isOriginal": false,
              "isPrettyPrinted": false,
              "isWasm": false,
              "thread": "FakeThread",
              "url": "https://aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com/assets/src/js/foo-view.js",
            },
          },
          "sourceActorId": "source-actor",
        },
        "scope": Object {
          "actor": "scope-actor",
          "bindings": Object {
            "arguments": Array [],
            "variables": Object {},
          },
          "function": null,
          "object": null,
          "parent": null,
          "scopeKind": "",
          "type": "block",
        },
        "source": Object {
          "displayURL": Object {
            "fileExtension": "js",
            "filename": "foo-view.js",
            "group": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com",
            "path": "/assets/src/js/foo-view.js",
            "search": "",
          },
          "extensionName": null,
          "id": "source",
          "isExtension": false,
          "isOriginal": false,
          "isPrettyPrinted": false,
          "isWasm": false,
          "thread": "FakeThread",
          "url": "https://aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com/assets/src/js/foo-view.js",
        },
        "state": "on-stack",
        "this": Object {},
        "thread": "FakeThread",
        "type": "call",
      }
    }
  />
  <br
    className="clipboard-only"
  />
</div>
`;

exports[`Frame library frame 1`] = `
<div
  className="frame selected"
  key="3"
  onContextMenu={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  role="listitem"
  tabIndex={0}
>
  <FrameIndent
    indentLevel={1}
  />
  <FrameTitle
    frame={
      Object {
        "asyncCause": null,
        "displayName": "updateEvents",
        "generatedLocation": Object {
          "column": undefined,
          "line": 12,
          "source": Object {
            "displayURL": Object {
              "fileExtension": "js",
              "filename": "backbone.js",
              "group": "",
              "path": "backbone.js",
              "search": "",
            },
            "extensionName": null,
            "id": "source",
            "isExtension": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "thread": "FakeThread",
            "url": "backbone.js",
          },
          "sourceActor": Object {
            "actor": "source-actor",
            "id": "source-actor",
            "source": "source",
            "sourceObject": Object {
              "displayURL": Object {
                "fileExtension": "js",
                "filename": "backbone.js",
                "group": "",
                "path": "backbone.js",
                "search": "",
              },
              "extensionName": null,
              "id": "source",
              "isExtension": false,
              "isOriginal": false,
              "isPrettyPrinted": false,
              "isWasm": false,
              "thread": "FakeThread",
              "url": "backbone.js",
            },
          },
          "sourceActorId": "source-actor",
        },
        "id": "3",
        "index": 0,
        "library": "backbone",
        "location": Object {
          "column": undefined,
          "line": 12,
          "source": Object {
            "displayURL": Object {
              "fileExtension": "js",
              "filename": "backbone.js",
              "group": "",
              "path": "backbone.js",
              "search": "",
            },
            "extensionName": null,
            "id": "source",
            "isExtension": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "thread": "FakeThread",
            "url": "backbone.js",
          },
          "sourceActor": Object {
            "actor": "source-actor",
            "id": "source-actor",
            "source": "source",
            "sourceObject": Object {
              "displayURL": Object {
                "fileExtension": "js",
                "filename": "backbone.js",
                "group": "",
                "path": "backbone.js",
                "search": "",
              },
              "extensionName": null,
              "id": "source",
              "isExtension": false,
              "isOriginal": false,
              "isPrettyPrinted": false,
              "isWasm": false,
              "thread": "FakeThread",
              "url": "backbone.js",
            },
          },
          "sourceActorId": "source-actor",
        },
        "scope": Object {
          "actor": "scope-actor",
          "bindings": Object {
            "arguments": Array [],
            "variables": Object {},
          },
          "function": null,
          "object": null,
          "parent": null,
          "scopeKind": "",
          "type": "block",
        },
        "source": Object {
          "displayURL": Object {
            "fileExtension": "js",
            "filename": "backbone.js",
            "group": "",
            "path": "backbone.js",
            "search": "",
          },
          "extensionName": null,
          "id": "source",
          "isExtension": false,
          "isOriginal": false,
          "isPrettyPrinted": false,
          "isWasm": false,
          "thread": "FakeThread",
          "url": "backbone.js",
        },
        "state": "on-stack",
        "this": Object {},
        "thread": "FakeThread",
        "type": "call",
      }
    }
    options={
      Object {
        "shouldMapDisplayName": true,
      }
    }
  />
  <span
    className="clipboard-only"
  >
     
  </span>
  <FrameLocation
    displayFullUrl={false}
    frame={
      Object {
        "asyncCause": null,
        "displayName": "updateEvents",
        "generatedLocation": Object {
          "column": undefined,
          "line": 12,
          "source": Object {
            "displayURL": Object {
              "fileExtension": "js",
              "filename": "backbone.js",
              "group": "",
              "path": "backbone.js",
              "search": "",
            },
            "extensionName": null,
            "id": "source",
            "isExtension": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "thread": "FakeThread",
            "url": "backbone.js",
          },
          "sourceActor": Object {
            "actor": "source-actor",
            "id": "source-actor",
            "source": "source",
            "sourceObject": Object {
              "displayURL": Object {
                "fileExtension": "js",
                "filename": "backbone.js",
                "group": "",
                "path": "backbone.js",
                "search": "",
              },
              "extensionName": null,
              "id": "source",
              "isExtension": false,
              "isOriginal": false,
              "isPrettyPrinted": false,
              "isWasm": false,
              "thread": "FakeThread",
              "url": "backbone.js",
            },
          },
          "sourceActorId": "source-actor",
        },
        "id": "3",
        "index": 0,
        "library": "backbone",
        "location": Object {
          "column": undefined,
          "line": 12,
          "source": Object {
            "displayURL": Object {
              "fileExtension": "js",
              "filename": "backbone.js",
              "group": "",
              "path": "backbone.js",
              "search": "",
            },
            "extensionName": null,
            "id": "source",
            "isExtension": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "thread": "FakeThread",
            "url": "backbone.js",
          },
          "sourceActor": Object {
            "actor": "source-actor",
            "id": "source-actor",
            "source": "source",
            "sourceObject": Object {
              "displayURL": Object {
                "fileExtension": "js",
                "filename": "backbone.js",
                "group": "",
                "path": "backbone.js",
                "search": "",
              },
              "extensionName": null,
              "id": "source",
              "isExtension": false,
              "isOriginal": false,
              "isPrettyPrinted": false,
              "isWasm": false,
              "thread": "FakeThread",
              "url": "backbone.js",
            },
          },
          "sourceActorId": "source-actor",
        },
        "scope": Object {
          "actor": "scope-actor",
          "bindings": Object {
            "arguments": Array [],
            "variables": Object {},
          },
          "function": null,
          "object": null,
          "parent": null,
          "scopeKind": "",
          "type": "block",
        },
        "source": Object {
          "displayURL": Object {
            "fileExtension": "js",
            "filename": "backbone.js",
            "group": "",
            "path": "backbone.js",
            "search": "",
          },
          "extensionName": null,
          "id": "source",
          "isExtension": false,
          "isOriginal": false,
          "isPrettyPrinted": false,
          "isWasm": false,
          "thread": "FakeThread",
          "url": "backbone.js",
        },
        "state": "on-stack",
        "this": Object {},
        "thread": "FakeThread",
        "type": "call",
      }
    }
  />
  <br
    className="clipboard-only"
  />
</div>
`;

exports[`Frame user frame (not selected) 1`] = `
<div
  className="frame"
  key="1"
  onContextMenu={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  role="listitem"
  tabIndex={0}
>
  <FrameIndent
    indentLevel={1}
  />
  <FrameTitle
    frame={
      Object {
        "asyncCause": null,
        "displayName": "renderFoo",
        "generatedLocation": Object {
          "column": undefined,
          "line": 10,
          "source": Object {
            "displayURL": Object {
              "fileExtension": "js",
              "filename": "foo-view.js",
              "group": "",
              "path": "foo-view.js",
              "search": "",
            },
            "extensionName": null,
            "id": "source",
            "isExtension": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "thread": "FakeThread",
            "url": "foo-view.js",
          },
          "sourceActor": Object {
            "actor": "source-actor",
            "id": "source-actor",
            "source": "source",
            "sourceObject": Object {
              "displayURL": Object {
                "fileExtension": "js",
                "filename": "foo-view.js",
                "group": "",
                "path": "foo-view.js",
                "search": "",
              },
              "extensionName": null,
              "id": "source",
              "isExtension": false,
              "isOriginal": false,
              "isPrettyPrinted": false,
              "isWasm": false,
              "thread": "FakeThread",
              "url": "foo-view.js",
            },
          },
          "sourceActorId": "source-actor",
        },
        "id": "1",
        "index": 0,
        "location": Object {
          "column": undefined,
          "line": 10,
          "source": Object {
            "displayURL": Object {
              "fileExtension": "js",
              "filename": "foo-view.js",
              "group": "",
              "path": "foo-view.js",
              "search": "",
            },
            "extensionName": null,
            "id": "source",
            "isExtension": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "thread": "FakeThread",
            "url": "foo-view.js",
          },
          "sourceActor": Object {
            "actor": "source-actor",
            "id": "source-actor",
            "source": "source",
            "sourceObject": Object {
              "displayURL": Object {
                "fileExtension": "js",
                "filename": "foo-view.js",
                "group": "",
                "path": "foo-view.js",
                "search": "",
              },
              "extensionName": null,
              "id": "source",
              "isExtension": false,
              "isOriginal": false,
              "isPrettyPrinted": false,
              "isWasm": false,
              "thread": "FakeThread",
              "url": "foo-view.js",
            },
          },
          "sourceActorId": "source-actor",
        },
        "scope": Object {
          "actor": "scope-actor",
          "bindings": Object {
            "arguments": Array [],
            "variables": Object {},
          },
          "function": null,
          "object": null,
          "parent": null,
          "scopeKind": "",
          "type": "block",
        },
        "source": Object {
          "displayURL": Object {
            "fileExtension": "js",
            "filename": "foo-view.js",
            "group": "",
            "path": "foo-view.js",
            "search": "",
          },
          "extensionName": null,
          "id": "source",
          "isExtension": false,
          "isOriginal": false,
          "isPrettyPrinted": false,
          "isWasm": false,
          "thread": "FakeThread",
          "url": "foo-view.js",
        },
        "state": "on-stack",
        "this": Object {},
        "thread": "FakeThread",
        "type": "call",
      }
    }
    options={
      Object {
        "shouldMapDisplayName": true,
      }
    }
  />
  <span
    className="clipboard-only"
  >
     
  </span>
  <FrameLocation
    displayFullUrl={false}
    frame={
      Object {
        "asyncCause": null,
        "displayName": "renderFoo",
        "generatedLocation": Object {
          "column": undefined,
          "line": 10,
          "source": Object {
            "displayURL": Object {
              "fileExtension": "js",
              "filename": "foo-view.js",
              "group": "",
              "path": "foo-view.js",
              "search": "",
            },
            "extensionName": null,
            "id": "source",
            "isExtension": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "thread": "FakeThread",
            "url": "foo-view.js",
          },
          "sourceActor": Object {
            "actor": "source-actor",
            "id": "source-actor",
            "source": "source",
            "sourceObject": Object {
              "displayURL": Object {
                "fileExtension": "js",
                "filename": "foo-view.js",
                "group": "",
                "path": "foo-view.js",
                "search": "",
              },
              "extensionName": null,
              "id": "source",
              "isExtension": false,
              "isOriginal": false,
              "isPrettyPrinted": false,
              "isWasm": false,
              "thread": "FakeThread",
              "url": "foo-view.js",
            },
          },
          "sourceActorId": "source-actor",
        },
        "id": "1",
        "index": 0,
        "location": Object {
          "column": undefined,
          "line": 10,
          "source": Object {
            "displayURL": Object {
              "fileExtension": "js",
              "filename": "foo-view.js",
              "group": "",
              "path": "foo-view.js",
              "search": "",
            },
            "extensionName": null,
            "id": "source",
            "isExtension": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "thread": "FakeThread",
            "url": "foo-view.js",
          },
          "sourceActor": Object {
            "actor": "source-actor",
            "id": "source-actor",
            "source": "source",
            "sourceObject": Object {
              "displayURL": Object {
                "fileExtension": "js",
                "filename": "foo-view.js",
                "group": "",
                "path": "foo-view.js",
                "search": "",
              },
              "extensionName": null,
              "id": "source",
              "isExtension": false,
              "isOriginal": false,
              "isPrettyPrinted": false,
              "isWasm": false,
              "thread": "FakeThread",
              "url": "foo-view.js",
            },
          },
          "sourceActorId": "source-actor",
        },
        "scope": Object {
          "actor": "scope-actor",
          "bindings": Object {
            "arguments": Array [],
            "variables": Object {},
          },
          "function": null,
          "object": null,
          "parent": null,
          "scopeKind": "",
          "type": "block",
        },
        "source": Object {
          "displayURL": Object {
            "fileExtension": "js",
            "filename": "foo-view.js",
            "group": "",
            "path": "foo-view.js",
            "search": "",
          },
          "extensionName": null,
          "id": "source",
          "isExtension": false,
          "isOriginal": false,
          "isPrettyPrinted": false,
          "isWasm": false,
          "thread": "FakeThread",
          "url": "foo-view.js",
        },
        "state": "on-stack",
        "this": Object {},
        "thread": "FakeThread",
        "type": "call",
      }
    }
  />
  <br
    className="clipboard-only"
  />
</div>
`;

exports[`Frame user frame 1`] = `
<div
  className="frame selected"
  key="1"
  onContextMenu={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  role="listitem"
  tabIndex={0}
>
  <FrameIndent
    indentLevel={1}
  />
  <FrameTitle
    frame={
      Object {
        "asyncCause": null,
        "displayName": "renderFoo",
        "generatedLocation": Object {
          "column": undefined,
          "line": 10,
          "source": Object {
            "displayURL": Object {
              "fileExtension": "js",
              "filename": "foo-view.js",
              "group": "",
              "path": "foo-view.js",
              "search": "",
            },
            "extensionName": null,
            "id": "source",
            "isExtension": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "thread": "FakeThread",
            "url": "foo-view.js",
          },
          "sourceActor": Object {
            "actor": "source-actor",
            "id": "source-actor",
            "source": "source",
            "sourceObject": Object {
              "displayURL": Object {
                "fileExtension": "js",
                "filename": "foo-view.js",
                "group": "",
                "path": "foo-view.js",
                "search": "",
              },
              "extensionName": null,
              "id": "source",
              "isExtension": false,
              "isOriginal": false,
              "isPrettyPrinted": false,
              "isWasm": false,
              "thread": "FakeThread",
              "url": "foo-view.js",
            },
          },
          "sourceActorId": "source-actor",
        },
        "id": "1",
        "index": 0,
        "location": Object {
          "column": undefined,
          "line": 10,
          "source": Object {
            "displayURL": Object {
              "fileExtension": "js",
              "filename": "foo-view.js",
              "group": "",
              "path": "foo-view.js",
              "search": "",
            },
            "extensionName": null,
            "id": "source",
            "isExtension": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "thread": "FakeThread",
            "url": "foo-view.js",
          },
          "sourceActor": Object {
            "actor": "source-actor",
            "id": "source-actor",
            "source": "source",
            "sourceObject": Object {
              "displayURL": Object {
                "fileExtension": "js",
                "filename": "foo-view.js",
                "group": "",
                "path": "foo-view.js",
                "search": "",
              },
              "extensionName": null,
              "id": "source",
              "isExtension": false,
              "isOriginal": false,
              "isPrettyPrinted": false,
              "isWasm": false,
              "thread": "FakeThread",
              "url": "foo-view.js",
            },
          },
          "sourceActorId": "source-actor",
        },
        "scope": Object {
          "actor": "scope-actor",
          "bindings": Object {
            "arguments": Array [],
            "variables": Object {},
          },
          "function": null,
          "object": null,
          "parent": null,
          "scopeKind": "",
          "type": "block",
        },
        "source": Object {
          "displayURL": Object {
            "fileExtension": "js",
            "filename": "foo-view.js",
            "group": "",
            "path": "foo-view.js",
            "search": "",
          },
          "extensionName": null,
          "id": "source",
          "isExtension": false,
          "isOriginal": false,
          "isPrettyPrinted": false,
          "isWasm": false,
          "thread": "FakeThread",
          "url": "foo-view.js",
        },
        "state": "on-stack",
        "this": Object {},
        "thread": "FakeThread",
        "type": "call",
      }
    }
    options={
      Object {
        "shouldMapDisplayName": true,
      }
    }
  />
  <span
    className="clipboard-only"
  >
     
  </span>
  <FrameLocation
    displayFullUrl={false}
    frame={
      Object {
        "asyncCause": null,
        "displayName": "renderFoo",
        "generatedLocation": Object {
          "column": undefined,
          "line": 10,
          "source": Object {
            "displayURL": Object {
              "fileExtension": "js",
              "filename": "foo-view.js",
              "group": "",
              "path": "foo-view.js",
              "search": "",
            },
            "extensionName": null,
            "id": "source",
            "isExtension": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "thread": "FakeThread",
            "url": "foo-view.js",
          },
          "sourceActor": Object {
            "actor": "source-actor",
            "id": "source-actor",
            "source": "source",
            "sourceObject": Object {
              "displayURL": Object {
                "fileExtension": "js",
                "filename": "foo-view.js",
                "group": "",
                "path": "foo-view.js",
                "search": "",
              },
              "extensionName": null,
              "id": "source",
              "isExtension": false,
              "isOriginal": false,
              "isPrettyPrinted": false,
              "isWasm": false,
              "thread": "FakeThread",
              "url": "foo-view.js",
            },
          },
          "sourceActorId": "source-actor",
        },
        "id": "1",
        "index": 0,
        "location": Object {
          "column": undefined,
          "line": 10,
          "source": Object {
            "displayURL": Object {
              "fileExtension": "js",
              "filename": "foo-view.js",
              "group": "",
              "path": "foo-view.js",
              "search": "",
            },
            "extensionName": null,
            "id": "source",
            "isExtension": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "thread": "FakeThread",
            "url": "foo-view.js",
          },
          "sourceActor": Object {
            "actor": "source-actor",
            "id": "source-actor",
            "source": "source",
            "sourceObject": Object {
              "displayURL": Object {
                "fileExtension": "js",
                "filename": "foo-view.js",
                "group": "",
                "path": "foo-view.js",
                "search": "",
              },
              "extensionName": null,
              "id": "source",
              "isExtension": false,
              "isOriginal": false,
              "isPrettyPrinted": false,
              "isWasm": false,
              "thread": "FakeThread",
              "url": "foo-view.js",
            },
          },
          "sourceActorId": "source-actor",
        },
        "scope": Object {
          "actor": "scope-actor",
          "bindings": Object {
            "arguments": Array [],
            "variables": Object {},
          },
          "function": null,
          "object": null,
          "parent": null,
          "scopeKind": "",
          "type": "block",
        },
        "source": Object {
          "displayURL": Object {
            "fileExtension": "js",
            "filename": "foo-view.js",
            "group": "",
            "path": "foo-view.js",
            "search": "",
          },
          "extensionName": null,
          "id": "source",
          "isExtension": false,
          "isOriginal": false,
          "isPrettyPrinted": false,
          "isWasm": false,
          "thread": "FakeThread",
          "url": "foo-view.js",
        },
        "state": "on-stack",
        "this": Object {},
        "thread": "FakeThread",
        "type": "call",
      }
    }
  />
  <br
    className="clipboard-only"
  />
</div>
`;
